<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"

        tools:ignore="ExtraText">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_app"
            android:textColor="@color/colorText"
            android:textSize="24dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginBottom="372dp"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.091"
            android:id="@+id/textTitulo"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/descricao_app"
              android:textSize="24dp"
              android:layout_gravity="center"
              tools:layout_editor_absoluteX="16dp" app:layout_constraintTop_toBottomOf="@+id/textTitulo"
              tools:ignore="MissingConstraints"
              android:id="@+id/textDescricao"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_margin="24dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDescricao"
            android:id="@+id/linearLayout" android:layout_marginTop="20dp">

        <EditText
                android:id="@+id/edtNomeUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edt_nome"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textDescricao"

                app:layout_constraintHorizontal_bias="1.0"/>
        <EditText
                android:id="@+id/edtIdade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edt_idade"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textDescricao"/>

        <Button
                android:id="@+id/btnCadastrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_cadastro"
                android:background="#FFFFFF"
                android:gravity="center"
                android:layout_margin="40dp"


                android:baselineAligned="false"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>